// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handles closing StaticQuery tag 1`] = `
"import staticQueryData from \\"public/static/d/2626356014.json\\";
import React from 'react';
import { StaticQuery } from 'gatsby';
export default (() => React.createElement(StaticQuery, {
  query: \\"2626356014\\",
  data: staticQueryData
}, data => React.createElement(\\"div\\", null, data.site.siteMetadata.title)));"
`;

exports[`Leaves other graphql tags alone 1`] = `
"import React from 'react';
import { graphql } from 'relay';
export default (() => React.createElement(\\"div\\", null, data.site.siteMetadata.title));
export const query = graphql\`
     {
       site { siteMetadata { title }}
     }
  \`;"
`;

exports[`Removes all gatsby queries 1`] = `
"export default (() => React.createElement(\\"div\\", null, data.site.siteMetadata.title));
export const siteMetaQuery = \\"2673797374\\";
export const query = \\"2589775908\\";"
`;

exports[`Transforms queries in <StaticQuery> 1`] = `
"import staticQueryData from \\"public/static/d/2626356014.json\\";
import React from 'react';
import { StaticQuery } from 'gatsby';
export default (() => React.createElement(StaticQuery, {
  query: \\"2626356014\\",
  render: data => React.createElement(\\"div\\", null, data.site.siteMetadata.title),
  data: staticQueryData
}));"
`;

exports[`Transforms queries in page components 1`] = `"export const query = \\"3687030656\\";"`;

exports[`allows the global tag 1`] = `"export const query = \\"3687030656\\";"`;

exports[`distinguishes between the right tags 1`] = `
"const foo = styled('div')\`
     {
       \${foo}
     }
  \`;
const pulse = keyframes\`
    0% {
      transform: scale(1);
      animation-timing-function: ease-in;
    }
    25% {
      animation-timing-function: ease-out;
      transform: scale(1.05);
    }
    50% {
      transform: scale(1.12);
      animation-timing-function: ease-in;
    }
    to {
      transform: scale(1);
      animation-timing-function: ease-out;
    }
  \`;
export const query = \\"3687030656\\";"
`;

exports[`handles import aliasing 1`] = `"export const query = \\"3687030656\\";"`;

exports[`handles require 1`] = `"export const query = \\"3687030656\\";"`;

exports[`handles require alias 1`] = `"export const query = \\"3687030656\\";"`;

exports[`handles require namespace 1`] = `"export const query = \\"3687030656\\";"`;
